@@ -19,6 +19,7 @@ public class FluidPressureAndFlowModule<T extends FluidPressureAndFlowModel> ext
     public final Property<Boolean> fluidDensityControlVisible = new Property<Boolean>( false );
     public final Property<Boolean> gravityControlVisible = new Property<Boolean>( false );
     public final Property<Boolean> rulerVisible = new Property<Boolean>( false );
+    public final Property<Boolean> measuringTapeVisible = new Property<Boolean>( false );
     public final ObservableProperty<Boolean> meterStickVisible;
     public final ObservableProperty<Boolean> yardStickVisible;
     public final Property<Boolean> hoseVisible = new Property<Boolean>( false );
