@@ -1,3 +1,4 @@
+Added measuring tape
 Fixed the size of the rulers in the water tower tab
 Fixed: Velocity sensor should read out water velocity
 Fixed: water drops should have size based on water volume, so low trickle is lots of drops.
